correct 'contact info' spacing

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -138,8 +138,7 @@ div.content {
 #footer h2,#footer h3 {
 	color: #fff;
 	font-size: 120%;
-	margin-top: 0;
-	line-height: auto;
+	line-height: normal;
 }
 #footer a {
 	color: #fff;
